--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,16 @@
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   <script src="./index.js"></script>
+  
+  <h2>Елена Морева</h2>
+<ul>
+  <li>6 yeards of experience in preparing students for UPE</li>
+  <li>Own result of passing VNO - 197 points 2 years in a row</li>
+  <li>
+    Passed excellent at the international analogue of UPE - Cambridge PET (Preliminary English Test)
+  </li>
+</ul>
+  
 </body>
 
 </html>
