--- a/src/index.html
+++ b/src/index.html
@@ -5,32 +5,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Заголовок страницы</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
+    rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
     crossorigin="anonymous" />
 </head>
 
 <body>
-  <include src="./partials/example.html"></include>
-  
   <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-  <include src="./partials/example.html"></include>
+  <include src="./partials/header.html"></include>
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
   <script src="./index.js"></script>
-  
-  <h2>Елена Морева</h2>
-<ul>
-  <li>6 yeards of experience in preparing students for UPE</li>
-  <li>Own result of passing VNO - 197 points 2 years in a row</li>
-  <li>
-    Passed excellent at the international analogue of UPE - Cambridge PET (Preliminary English Test)
-  </li>
-</ul>
-  
 </body>
 
 </html>
